--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,7 +1,7 @@
 name: Build App
 on: workflow_dispatch
 jobs:
-  my-job:
+  build-and-upload-app:
     runs-on: ubuntu-latest
     steps:
       # Step 1
@@ -28,10 +28,25 @@ jobs:
         run: echo "secret=${{ secrets.MY_SECRET }}" >> gradle.properties
       # Step 5
       - name: Build Android App
-        run: ./gradlew :app:assembleDebug
+        run: |
+          ./gradlew :app:assembleDebug
+          mkdir -p artifacts
+          cp app/build/outputs/apk/debug/app-debug.apk artifacts
       # Step 6
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: artifacts/app-debug.apk
+  download-app:
+    runs-on: ubuntu-latest
+    steps:
+      # Step 1
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: android-apk
+          path: artifacts/app-debug.apk
+      # Step 2
+      - name: Check that artifact is ready
+        run: ls artifacts
